Fix: Attachment Details button styles (#1014)
* fix: button styles on attachment details modal

* fix: remove extra space on list view search

* fix: list view transcoding status tooltip

--- a/assets/src/css/admin.scss
+++ b/assets/src/css/admin.scss
@@ -530,6 +530,11 @@ $media-frame-width: calc(300px + 2 * 24px);
 
 	.transcoding-status__loader {
 		position: unset;
+
+		&::after {
+			$padding: 0.5rem;
+			width: calc(100% - 2 * $padding);
+		}
 	}
 }
 
